--- a/app/src/main/res/layout/activity_detailtrip.xml
+++ b/app/src/main/res/layout/activity_detailtrip.xml
@@ -11,14 +11,26 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         >
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/kotakatas"/>
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/kiri2"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:text="Trip Detail"
+                android:layout_marginLeft="70dp"
+                android:textColor="@color/putih"
+                android:layout_marginTop="18dp"
+                android:textSize="20sp"/>
+        </RelativeLayout>
 
     </android.support.design.widget.AppBarLayout>
 
