--- a/app/src/main/res/layout/activity_listroom.xml
+++ b/app/src/main/res/layout/activity_listroom.xml
@@ -23,6 +23,7 @@
             android:text="List Room"
             android:layout_marginLeft="70dp"
             android:textColor="@color/putih"
+            android:layout_marginTop="10dp"
             android:textSize="20sp"/>
     </RelativeLayout>
     <TextView
