--- a/app/src/main/res/layout/content_listroom.xml
+++ b/app/src/main/res/layout/content_listroom.xml
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:visibility="visible"
                 android:layout_height="0.5dp"
-                android:background="@color/color1"/>
+                android:background="@color/cardview_shadow_start_color"/>
 
         </LinearLayout>
 
