--- a/app/src/main/res/layout/content_detailtrip.xml
+++ b/app/src/main/res/layout/content_detailtrip.xml
@@ -135,86 +135,12 @@
             android:layout_height="175dp"
             android:layout_marginLeft="17.5dp"
             android:src="@drawable/papan"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginTop="40dp">
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_alignTop="@+id/null"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/asuransi-icon" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Asuransi"
-                    android:textColor="@color/putih"
-                    android:layout_marginLeft="10dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/asuransi-icon" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Transportasi"
-                    android:textColor="@color/putih"
-                    android:layout_marginLeft="10dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/asuransi-icon" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Simaksi"
-                    android:textColor="@color/putih"
-                    android:layout_marginLeft="10dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:orientation="vertical">
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/asuransi-icon" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Guide"
-                    android:textColor="@color/putih"
-                    android:layout_marginLeft="10dp"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        <ImageView
+            android:layout_width="359dp"
+            android:layout_height="125dp"
+            android:layout_marginLeft="17.5dp"
+            android:layout_marginTop="27dp"
+            android:src="@drawable/Group108"/>
     </RelativeLayout>
 
 <RelativeLayout
